--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -26,7 +26,7 @@
         <div class="container">
             <a class="navbar-brand" href="{% url 'portfolio:home' %}">
                 <img src="{% static 'logo.png' %}" width="30" height="30" class="d-inline-block align-top">
-                <span>Personal Portfolio</span>
+                <span>Ayoub Elorfi</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="{% static 'resume/Resume-2.pdf' %}">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+                        <a class="nav-link" href="linkedin.com/in/ayoub-elorfi-46177a154" target="_blank">LinkedIn</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://twitter.com" target="_blank">Twitter</a>
