--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -15,7 +15,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="{% static 'logo.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'Logo.png' %}">
 
     <title>Personal Portfolio</title>
 </head>
@@ -25,7 +25,7 @@
     <nav id="topNav" class="navbar navbar-expand-md navbar-light">
         <div class="container">
             <a class="navbar-brand" href="{% url 'portfolio:home' %}">
-                <img src="{% static 'logo.png' %}" width="30" height="30" class="d-inline-block align-top">
+                <img src="{% static 'Logo.png' %}" width="30" height="30" class="d-inline-block align-top">
                 <span>Ayoub Elorfi</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
